feat(provisioning/biossetting): U2-2 BIOS 세팅 템플릿 CRUD — board_model FK·상세·사용중 차단 (U2-2-1/2/3)
BIOS 세팅을 재사용 템플릿으로 영속화하고 guest 정의서 연결(U2-2-3)의 공급자 측을 완성:
- 템플릿 도메인 신설: flat diff JSON 컬럼(BiosSettingValuesConverter) + registry 재검증
  (validateAndCoerce — templatable() SSOT 로 PASSWORD 배제), 이름 전역 unique 409
- 보드 귀속을 varchar boardKey → board_model FK(@ManyToOne, ON DELETE CASCADE)로 전환,
  보드 선택 랜딩 = BoardModel 실데이터 + catalogAvailable 판정(UI 차단 + 로더 404 안전망)
- 상세 화면: MenuPath 재조인 그룹 + 기본값→저장값 대비 + Redfish Request Body 프리뷰
  (BiosRedfishPayloadAssembler 조회 시점 조립), 수정 = 생성 화면 재사용 + 저장값 overlay
- 사용중 삭제 차단 SPI(BiosSettingTemplateUsageChecker — 구현은 setting 커밋) + 409 +
  목록/상세 inUse 표시
- 구 PoC 표면 정비: BiosSetupController/Service·initial_settings.md 사슬 제거,
  bios-setup → bios-setting-* 리네임, 카탈로그 엔진은 BiosSetupLoader 단일 seam 유지

주의: BiosSettingTemplateUsageChecker 구현 빈은 후속 setting 커밋에 포함 —
본 커밋 단독으로 컴파일·테스트는 그린이나 부트는 후속 커밋과 함께 완성된다.

Claude Code(AI)와 페어로 작성.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01CET9fd87SbbUigLyD58ZPf